2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-11-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2pk.c (main): Bug fix: mapfiles is malloc()ed, so do not
	realloc() mapfiles+offset.

	* tests/ttf2pk.test, tests/ttf2pk.cfg: Add subfont tests.
	* tests/GenR102-{ec,h,v}.map: Additional test data.
	* tests/ttfonts.map: Removed.

2011-10-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* data/HKSCS.sfd: New file copied from Master (r3283).
	* data/U*.sfd: Updated from Master (r3283).
	* data/ttfonts.map: Updated from Master (r22207).
	* Makefile.am ({cfg,enc,map,sfd}data_DATA): Install data files.

2011-04-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* parse.c, ttfenc.c: Bug fix. Increase buffer size for increased
	code/glyph range.

2011-04-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ttf2pk.test (new): Shell script for a test case.
	* tests/GenR102.ttf, tests/gentium-ec.enc, tests/ttf2pk.cfg,
	tests/ttfonts.map (new}: Test input.
	* Makefile.am: Adapted.

2011-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* errormsg.c, ttfaux.c: Move 'extern progname' from here ...
	* errormsg.h: ... to here and make it const.
	* ttf2pk.c, ttf2tfm.c: Define 'const char *progname'.

	* filesrch.c: Move 'extern setup_list' from here ...
	* emtexdir..h: ... to here.

2009-11-27  Karl Berry  <karl@tug.org>

	* ttf2pk.c (USAGE): mention email address, update copyrights.

2009-11-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ttf2pk.c (main): do not dereference argv[1] if it's nonexistent.

2009-11-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, filesrch.c: Require recent kpathsea version.

2009-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* case.h, filesrch.[ch], newobj.[ch], texenc.[ch], tfmaux.c,
	ttf2pk.c, ttf2tfm.[ch], ttfaux.c, ttfenc.[ch], ttflib.c,
	vplaux.c: Constify many global, struct member, param, and local
	strings.